--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,305 +1,9 @@
-# encoding: UTF-8
-# pt-BR translations for Ruby on Rails
-"pt-BR":
-  # Typus
-
-  Trash: Excluir
-  All: Todos
-  Save: Salvar
-  Models: Cadastros
-  Applications: Menu
-  "Save and add another": Salvar e adicionar outro
-  "Save and continue editing": Salvar e continuar editando
-  "Show by %{attribute}": Mostrar por %{attribute}
-  "Add New %{resource}": "Adicionar novo %{resource}"
-
-  "Actions": "Ações"
-  "Active":
-  "Add": "Adicionar"
-  "Add New": "Adicionar novo"
-  "Are you sure?":
-  "Are you sure you want to sign out and end your session?": "Tem certeza que quer sair e encerrar sua sessão?"
-
-  "Change %{attribute}?": "Mudar %{attribute}?"
-  "Create %{resource}": "Criar %{resource}"
-
-  "Dashboard": "Painel"
-  "Down": "Descer"
-
-  "Edit": "Editar"
-  "Edit %{resource}": "Editar %{resource}"
-  "Enter your email below to create the first user": "Escreva seu email para criar o primeiro usuário"
-
-  "False": "Falso"
-  "Filter": "Filtrar"
-
-  "I remember my password": "Lembro minha senha"
-  "If you didn't request a password update, you can ignore this message": "Se você não pediu uma renovação de senha, por favor ignore esta mensagem."
-  "If you have made any changes to the fields without clicking the Save/Update entry button, your changes will be lost": "Se você fez alterações nos campos e não clicou no botão de Salvar/Atualizar, suas alterações serão perdidas"
-  "Inactive":
-
-  "Last few days": "Últimos dias"
-  "Last 30 days": "Últimos 30 dias"
-  "Last 7 days": "Últimos 7 dias"
-  "Logged in as": "Logado como"
-  "Login": "Login"
-
-  "New": "Novo"
-  "New %{resource}": "Novo %{resource}"
-  "Next": "Próximo"
-  "No %{resources} found":
-
-  "Password recovery link sent to your email": "Link para recuperar senha enviado para seu email."
-  "Previous": "Anterior"
-
-  "Record moved %{to}": "Registro movido %{to}."
-  "Recover password": "Recuperar senha"
-  "Remove": "Remover"
-  "Remove %{resource}?": "Remover %{resource}?"
-  "Reset password": "Trocar senha"
-  "Resources": "Recursos"
-
-  "Save %{resource}":
-  "Search": "Busca"
-  "Show": "Mostrar"
-  "Show all dates":
-  "Show by %{attribute}":
-  "Show %{resource}": "Mostrar %{resource}"
-  "Sign in": "Entrar"
-  "Sign out": "Sair"
-  "Sign up": "Criar conta"
-  "System Users Administration": "Administrar usuários do sistema"
-
-  "Today": "Hoje"
-  "True": "Verdadeiro"
-
-  "Unrelate": "Desvincular"
-  "Up": "Subir"
-
-  "View all %{attribute}":
-  "View site": "Ver site"
-
-  "You can't toggle your status": "Você não pode mudar seu status."
-  "You can update your password at": "Você pode atualizar sua senha em"
-  "You can't change your role": "Você não pode mudar sua própria função no sistema."
-
-  "%{errors} prohibited this page from being saved:":
-  "%{model} successfully created": "%{model} criado com sucesso."
-  "%{model} successfully removed": "%{model} removido com sucesso."
-  "%{model} successfully updated": "%{model} atualizado com sucesso."
-
-  # formatos de data e hora
-  date:
-    formats:
-      default: "%d/%m/%Y"
-      short: "%d de %B"
-      long: "%d de %B de %Y"
-
-    day_names: [Domingo, Segunda, Terça, Quarta, Quinta, Sexta, Sábado]
-    abbr_day_names: [Dom, Seg, Ter, Qua, Qui, Sex, Sáb]
-
-    month_names: [~, Janeiro, Fevereiro, Março, Abril, Maio, Junho, Julho, Agosto, Setembro, Outubro, Novembro, Dezembro]
-    abbr_month_names: [~, Jan, Fev, Mar, Abr, Mai, Jun, Jul, Ago, Set, Out, Nov, Dez]
-    order:
-      - :day
-      - :month
-      - :year
-
+'pt-BR':
   time:
     formats:
-      default: "%d de %B de %Y às %Hh%M"
-      short: "%d/%m, %H:%M h"
-      long: "%d de %B de %Y às %Hh%M"
-    am: ''
-    pm: ''
-
-  # Usado no Array.to_sentence
-  support:
-    array:
-      words_connector: ", "
-      two_words_connector: " e "
-      last_word_connector: " e "
-
-    select:
-      prompt: "Por favor selecione"
-
-  number:
-    format:
-      separator: ','
-      delimiter: '.'
-      precision: 3
-      significant: false
-      strip_insignificant_zeros: false
-
-    currency:
-      format:
-        format: '%u %n'
-        unit: 'R$'
-        separator: ','
-        delimiter: '.'
-        precision: 2
-        significant: false
-        strip_insignificant_zeros: false
-
-    percentage:
-      format:
-        delimiter: '.'
-
-    precision:
-      format:
-        delimiter: '.'
-
-    human:
-      format:
-        delimiter: '.'
-        precision: 2
-        significant: true
-        strip_insignificant_zeros: true
-      storage_units:
-        format: "%n %u"
-        units:
-          byte:
-            one: "Byte"
-            other: "Bytes"
-          kb: "KB"
-          mb: "MB"
-          gb: "GB"
-          tb: "TB"
-      # number_to_human()
-      # new in rails 3: please add to other locales
-      decimal_units:
-        format: "%n %u"
-        units:
-          unit: ""
-          thousand: "mil"
-          million:
-            one: milhão
-            other: milhões
-          billion:
-            one: bilhão
-            other: bilhões
-          trillion:
-            one: trilhão
-            other: trilhões
-          quadrillion:
-            one: quatrilhão
-            other: quatrilhões
-
-  # distancia do tempo em palavras
-  datetime:
-    distance_in_words:
-      half_a_minute: 'meio minuto'
-      less_than_x_seconds:
-        one: 'menos de 1 segundo'
-        other: 'menos de %{count} segundos'
-      x_seconds:
-        one: '1 segundo'
-        other: '%{count} segundos'
-      less_than_x_minutes:
-        one: 'menos de um minuto'
-        other: 'menos de %{count} minutos'
-      x_minutes:
-        one: '1 minuto'
-        other: '%{count} minutos'
-      about_x_hours:
-        one: 'aproximadamente 1 hora'
-        other: 'aproximadamente %{count} horas'
-      x_days:
-        one: '1 dia'
-        other: '%{count} dias'
-      about_x_months:
-        one: 'aproximadamente 1 mês'
-        other: 'aproximadamente %{count} meses'
-      x_months:
-        one: '1 mês'
-        other: '%{count} meses'
-      about_x_years:
-        one: 'aproximadamente 1 ano'
-        other: 'aproximadamente %{count} anos'
-      over_x_years:
-        one: 'mais de 1 ano'
-        other: 'mais de %{count} anos'
-      almost_x_years:
-        one: 'quase 1 ano'
-        other: 'quase %{count} anos'
-    prompts:
-      year: "Ano"
-      month: "Mês"
-      day: "Dia"
-      hour: "Hora"
-      minute: "Minuto"
-      second: "Segundo"
-
-  helpers:
-    select:
-      prompt: "Por favor selecione"
-
-    submit:
-      create: 'Criar %{model}'
-      update: 'Atualizar %{model}'
-      submit: 'Salvar %{model}'
-
-  errors:
-    format: "%{attribute} %{message}"
-
-    template:
-      header:
-        one: "Não foi possível gravar %{model}: 1 erro"
-        other: "Não foi possível gravar %{model}: %{count} erros."
-      body: "Por favor, verifique o(s) seguinte(s) campo(s):"
-
-    messages: &errors_messages
-      inclusion: "não está incluído na lista"
-      exclusion: "não está disponível"
-      invalid: "formato inválido"
-      confirmation: "não está de acordo com a confirmação"
-      accepted: "deve ser aceito"
-      empty: "não pode estar vazio"
-      blank: "não pode estar em branco"
-      too_long: "máximo de %{count} caracteres"
-      too_short: "mínimo de %{count} caracteres"
-      wrong_length: "deve ter %{count} caracteres"
-      not_a_number: "deve ser um número"
-      not_an_integer: "não é um número inteiro"
-      greater_than: "deve ser maior que %{count}"
-      greater_than_or_equal_to: "deve ser maior ou igual a %{count}"
-      equal_to: "deve ser igual a %{count}"
-      less_than: "deve ser menor que %{count}"
-      less_than_or_equal_to: "deve ser menor ou igual a %{count}"
-      odd: "deve ser ímpar"
-      even: "deve ser par"
-      taken: "nome de usuário indisponível"
+      default: '%d/%m/%Y - %Hh%M'
 
   activerecord:
     errors:
-      template:
-        header:
-          one: "Não foi possível gravar %{model}: 1 erro"
-          other: "Não foi possível gravar %{model}: %{count} erros."
-        body: "Por favor, verifique o(s) seguinte(s) campo(s):"
-
       messages:
-        record_invalid: "A validação falhou: %{errors}"
-        <<: *errors_messages
-
-      full_messages:
-        format: "%{attribute}%{message}"
-    models:
-      company: Empresa
-      search: Pesquisa
-      email: E-mails
-    attributes:
-      company:
-        name: Nome
-        phone: Telefone
-        address: Endereço
-        segments: Categorias
-        products: Produtos
-        plus: Pagante?
-      search:
-        terms: "Termos"
-        created_at: "Quando"
-      email:
-        name: Nome
-        email: E-mail
-        sent_at: Último Envio
+        blank: 'deve ser preenchido'
