config kaminari locales

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -1,4 +1,12 @@
 'pt-BR':
+  views:
+    pagination:
+      first: '&laquo; Primeira'
+      last: 'Última &raquo;'
+      previous: '&lsaquo; Anterior'
+      next: 'Próxima &rsaquo;'
+      truncate: '...'
+
   activerecord:
     errors:
       messages:
