--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -10,4 +10,5 @@
   activerecord:
     errors:
       messages:
-        blank: 'deve ser preenchido'
+        blank: 'este campo deve ser preenchido'
+        invalid: 'utilize este formato: seu@email.com'
